hphp/test/zend/bad/ext/standard/tests/file/bug41874_3.php
<?php
system('cd 1:\\non_existent; dir nonexistent');
?>